# chat-a2a

./: .env.example  .gitignore  .mypy.ini  .ruff.toml  Makefile  README.md  main.py  pyproject.toml
agent/: base.py  gate_event.py  model.py
agent/gate_agent/: factory.py
agent/gate_agent/langgraph/: base.py  event.py  plan.py
agent/plan/: base.py
agent/plan/langchain/: default.py  prompt.py
agent/remote_agent/: factory.py
agent/remote_agent/a2a/: config.py  default.py
agent/reporter/: base.py
agent/reporter/langchain/: default.py  prompt.py
agent/utils/a2a/: message.py
agent/utils/langchain/: message.py
app/: registrar.py
app/api/: router.py
app/api/v1/: chat.py
app/crud/: crud_conversation.py  crud_message.py
app/do/: coversation_do.py  message_do.py
app/model/: conversation_po.py  message_po.py
app/schema/: chat_schema.py
app/service/: chat_service.py  conversation_service.py  message_service.py
common/: model.py  schema.py
common/container/: container.py
common/exception/: errors.py  exception_handler.py
common/response/: response_schema.py
libs/: conf.py
libs/a2a_runtime/: client.py
libs/database/: database.py
migrations/: migrate.py
migrations/up/: v1.0.0.sql
pkg/acrud_plus/: crud.py  errors.py  types.py  utils.py
pkg/llm/: factory.py
utils/: str.py  timezone.py
